<resources>
    <string name="app_name">Github Example</string>
    <string name="text_repositories">Repositories</string>
    <string name="text_user_repositories">User Repos</string>
    <string name="text_user">Search User</string>
    <string name="text_info">Info</string>
    <!-- Repositories. -->
    <string name="title_repositories">Repositories</string>
    <!-- Information. -->
    <string name="title_information">Information</string>
    <string name="information_subtitle_project">Project Information</string>
    <string name="information_title_app">ANDROID GitHub API Example</string>
    <string name="information_created_by">Created by Juan Casas</string>
    <string name="information_email"><b>Email:</b> imhouses@ciencias.unam.mx</string>
    <string name="information_repository_info">Repository Info</string>
    <string name="information_repository_body">The source code of this application can be found at the following link:\n\n<u>https://github.com/ImHouses/Android-Jetpack-GitHub-Example</u></string>
    <string name="information_license_subtitle">License Information</string>
    <string name="information_license"><![CDATA[<p>Copyright (&#169;) 2019 Juan Casas</p>
        <p>Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:</p><br/>
        <p>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.</p><br/>
        <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>]]></string>
</resources>
