<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_repositories"
        android:enabled="true"
        android:icon="@drawable/ic_repo_white_24dp"
        android:title="@string/text_repositories"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_user"
        android:enabled="true"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/text_user"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_user_repos"
        android:enabled="true"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/text_user_repositories"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_info"
        android:enabled="true"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/text_info"
        app:showAsAction="ifRoom"/>
</menu>