<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <TextView
            android:id="@+id/text_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_sides"
            android:layout_marginEnd="@dimen/margin_sides"
            android:layout_marginTop="@dimen/title_margin_top"
            android:layout_marginBottom="@dimen/content_margin_title"
            android:text="@string/title_information"
            style="@style/SectionTitle"/>
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">
            <TextView
                android:id="@+id/text_info_app_name"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/information_title_app"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/text_info_subtitle_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/information_subtitle_project"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_info_app_name"/>
            <TextView
                android:id="@+id/text_info_created_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/information_created_by"
                style="@style/BodyTextView"
                app:layout_constraintStart_toStartOf="@id/text_info_subtitle_info"
                app:layout_constraintTop_toBottomOf="@+id/text_info_subtitle_info"/>
            <TextView
                android:id="@+id/text_info_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/information_email"
                style="@style/BodyTextView"
                app:layout_constraintStart_toEndOf="@id/text_info_created_by"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_info_created_by"/>
            <TextView
                android:id="@+id/text_info_repo_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/information_repository_info"
                style="@style/SubtitleTextView"
                app:layout_constraintTop_toBottomOf="@id/text_info_email"
                app:layout_constraintStart_toStartOf="@id/text_info_subtitle_info"
                app:layout_constraintEnd_toEndOf="@id/text_info_email"/>
            <TextView
                android:id="@+id/text_info_repo_info_body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/information_repository_body"
                style="@style/BodyTextView"
                app:layout_constraintTop_toBottomOf="@id/text_info_repo_info"
                app:layout_constraintStart_toStartOf="@id/text_info_subtitle_info"
                app:layout_constraintEnd_toEndOf="@id/text_info_email"/>
            <TextView
                android:id="@+id/text_info_license_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/information_license_subtitle"
                style="@style/SubtitleTextView"
                app:layout_constraintStart_toStartOf="@id/text_info_subtitle_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_info_repo_info_body"/>
            <TextView
                android:id="@+id/textInfoLicenseBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:text="@string/information_license"
                style="@style/BodyTextView"
                app:layout_constraintStart_toStartOf="@id/text_info_subtitle_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_info_license_subtitle"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>